[package]
name = "rust-datastructures"
version = "0.1.0"
edition = "2024"
autobenches = false
autoexamples = false
autotests = false

[features]
debug = []

[lib]
name = "ds"
test = false
doctest = false

[dev-dependencies]
k9 = "0.12.0"


# [[test]]
# name = "unique_ptr"
# path = "./tests/test_unique_ptr.rs"


[[test]]
name = "simple_binary_tree"
path = "./tests/test_simple_binary_tree.rs"

# # [[test]]
# # name = "binary_tree_with_references"
# # path = "./tests/test_binary_tree_refs.rs"

# # [[test]]
# # name = "binary_tree"
# # path = "./tests/test_binary_tree.rs"

# [[test]]
# name = "node"
# path = "./tests/test_node.rs"

# [[test]]
# name = "refcounter"
# path = "./tests/test_refcounter.rs"

# [[test]]
# name = "cell_conversion"
# path = "./tests/test_cell_conversion.rs"

# [[test]]
# name = "cons"
# path = "./tests/test_cons.rs"

# [[test]]
# name = "cell_methods"
# path = "./tests/test_cell_methods.rs"

# [[test]]
# name = "value_conversion"
# path = "./tests/test_value_conversion.rs"

# [[test]]
# name = "value"
# path = "./tests/test_value.rs"
